text align fix

--- a/pages/movies-style.css
+++ b/pages/movies-style.css
@@ -39,7 +39,7 @@ main {
     align-items: center;
     color: #fff;
     font-size: 32px;
-    text-align: center;
+    justify-content: center;
     margin: 2vh;
     height: 9vh;
 }
@@ -104,4 +104,8 @@ i {
         width: 60vw;
     }
 
+    .movie-card > h1 {
+        height: 15vh;
+        width: 105%;
+    }
 }
